fix: Overflow issue in TCH landing page

--- a/src/components/Investor/InvestorHome/Components/Questionnaire/Questionnaire.scss
+++ b/src/components/Investor/InvestorHome/Components/Questionnaire/Questionnaire.scss
@@ -5,7 +5,7 @@
 
   //   component styles
   .chat_box {
-    min-height: 65px;
+    // min-height: 65px;
     margin-inline: 16px;
     padding: 8px;
     border: 1px solid #e7e7e7;
@@ -35,10 +35,12 @@
   .user_input {
     background-color: #efefef;
     outline: 0;
+    width: 100%;
+    resize: none;
   }
 
   .send_btn {
-    width: 70px;
+    flex: 0 0 70px;
     height: 70px;
     background-color: rgba(253, 89, 1, 1);
     border: 1px solid transparent;
